# VoiceChat-CLI

./: .gitignore  Cargo.toml  README.md
audio/: Cargo.toml
audio/src/: buffer.rs  lib.rs  main.rs  playback.rs  upd.rs  voice.rs
client/: Cargo.toml
client/src/: app.rs  chat.rs  cli.rs  handshake.rs  host.rs  identity.rs  main.rs
client/tests/: integration_test.rs  session_test.rs  summary_test.rs
config/: identity.key
signaling/: Cargo.toml
signaling/src/: main.rs  protocol.rs  server.rs
vc_core/: Cargo.toml
vc_core/src/: lib.rs
vc_core/src/crypto/: crypto.rs
vc_core/src/net/: client_handshake.rs  host_handshek.rs  mod.rs  secure_stream.rs
vc_core/src/protocol/: chat.rs  handshake.rs  mod.rs
vc_core/src/room/: code.rs
vc_core/src/state/: mod.rs  secure_session.rs
vc_core/tests/: handshake_test.rs
